welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:8: error: 'while' expected but identifier found.
        	 poseBiscuit();
                 ^Methods:8: error: '(' expected but ';' found.
        	 poseBiscuit();
                              ^