welcome.lessons.welcome.methods.basics.Methods.scala.code
var nbP = 0
        def goAndGet() {
        while(!estSurBiscuit){
        	avance();}
          prendBiscuit();
        	do{recule();nbP = nbP + 1 }
        	 poseBiscuit();
        }

        for (i <- 1 to 7) {
            goAndGet();
            right();
            forward();
            left();
        }
